# chord-gen

./: Cargo.toml  Readme.md  results.txt
.GitHub/workflows/: build yml
.github/workflows/: main.yml
src/: TODO.md  lib.rs  main.rs  render.rs  svg.rs  types.rs  utils.rs
