[package]
name = "chord-gen"
version = "2.1.0"
edition = "2021"
authors = ["James Baum <james@jamesbaum.co.uk>"]
default-run = "chord_cli"
repository = "https://github.com/whostolemyhat/chord-gen"
homepage = "https://github.com/whostolemyhat/chord-gen"
description = "Create SVGs of guitar chords"
license = "MIT"
readme = "Readme.md"

include = [
  "**/*.rs",
  "Cargo.toml",
  "templates/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
tera = "1.17.1"

[lib]
name = "chord_gen"
path = "src/lib.rs"

[[bin]]
name = "chord_cli"
path = "src/main.rs"
